# sluice

./: .gitignore  README.md  pyproject.toml
docs/design/: 01-atomic-lua.md  02-redis-fallback.md  03-declarative-rate-limiting.md
examples/: basic_app.py
sluice/: __init__.py
sluice/algorithms/: __init__.py  base.py  sliding_window_counter.py  sliding_window_log.py  token_bucket.py
sluice/backends/: __init__.py  base.py  fallback_backend.py  hybrid_backend.py  redis_backend.py
sluice/middleware/: __init__.py  fastapi.py  policy.py  utils.py
sluice/scripts/: sliding_window_counter.lua  sliding_window_log.lua  token_bucket.lua
test/: test_circuit_breaker.py  test_concurrency.py  test_hybrid.py
tests/: test_algorithms.py  test_circuit_breaker.py  test_concurrency.py  test_fallback.py  test_hybrid.py  test_policy.py
